# acp-ui

./: FORK_CHANGES.md  README.md  package-lock.json  package.json
.github/workflows/: deploy-web.yml
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/src/: agent.rs  config.rs  lib.rs
src/components/: AgentSelector.vue  ChatView.vue  ModePicker.vue  ModelPicker.vue  PermissionDialog.vue  SettingsView.vue
src/lib/: acp-bridge.ts  platform.ts  tauri.ts  telemetry.ts  types.ts
src/lib/transport/: index.ts  stdio.ts  types.ts  websocket.ts
src/stores/: config.ts  session.ts
